Added more content / button & badge / fixed errors

--- a/Before You Start/1. Mindset and Challenges.md
+++ b/Before You Start/1. Mindset and Challenges.md
@@ -92,6 +92,6 @@ _"**Tutorial hell**" is when someone who's learning to code gets stuck always do
 <br/>
 <br/>
 
-# Page Navigation
+## Page Navigation
 
-[Next Page](./2.%20Dev-Tools%20Setup%20Guide.md)
+[![Next Page](https://img.shields.io/badge/Next%20Page-1DA1F2?style=for-the-badge)](./2.%20Dev-Tools%20Setup%20Guide.md)
