--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -25,9 +25,7 @@ Git's significance cannot be overstated. It empowers individuals and teams to wo
 
 (We are using Git to push our files to this repository for context)
 
-### What You'll Learn
-
----
+## What You'll Learn
 
 Throughout the "Git Fundamentals" section, you'll embark on a journey to master the essential concepts and workflows of Git. We'll cover topics such as:
 
@@ -52,3 +50,81 @@ Throughout the "Git Fundamentals" section, you'll embark on a journey to master 
 19. **[Git GUI Tools](#git-gui-tools)**
 
 By the end of this section, you'll have a solid foundation in Git, setting the stage for you to become a proficient version control practitioner.
+
+# Git Installation
+
+This tutorial assumes that you are using a Windows operating system and want to start using Git. If you're using Linux or macOS, you can refer to the official Git documentation for installation instructions provided by the creators themselves [here](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git).
+
+## Choosing the Right Edition
+
+Before we begin, it's essential to understand the two available options for Git installation on Windows:
+
+### Standalone Installer
+
+- Think of it as a standard software installation on your computer, similar to installing any other program.
+- When you use the standalone installer, Git becomes a part of your computer's standard toolset.
+- You can use Git from anywhere on your computer without any additional steps.
+- It's an excellent choice if you plan to use Git regularly and want it to seamlessly integrate with other software on your computer.
+
+### Portable ("Thumbdrive Edition")
+
+- Imagine it as a portable tool that you can carry around on a USB drive, like a digital Swiss Army knife.
+- It doesn't install Git on your computer; instead, it runs directly from the USB drive.
+- You can use Git on different computers without leaving any traces on those computers.
+- It's convenient when you need to use Git on multiple computers without making any changes to those computers, such as when you're on the go or using a friend's computer.
+
+For this tutorial, we will install the standalone installer and explain how to install it on your Windows computer. Please follow the step-by-step guide below to install Git correctly.
+
+## Installation Steps
+
+1. Visit the official Git download page for Windows at [https://git-scm.com/download/win](https://git-scm.com/download/win).
+
+2. Download the **Standalone Installer** (64-bit or 32-bit) based on your computer's architecture.
+
+    If you are unsure about your Windows bit version, please follow this tutorial to check your computer's bit version: [How to Check Windows Bit Rate](https://support.microsoft.com/en-us/windows/32-bit-and-64-bit-windows-frequently-asked-questions-c6ca9541-8dce-4d48-0415-94a3faa2e13d).
+
+3. Once the download is complete, double-click on the installer file to run the setup wizard.
+
+4. The setup wizard will start, and you'll be presented with the GNU license agreement. Read through it and click "Next."
+
+5. Choose the location to install Git. It is recommended to leave it as the default (usually on the C drive), but you can choose another location if needed. Click "Next."
+
+6. You'll be asked to choose components. You can leave these settings as default, but if you want a desktop icon for Git, check the "**Additional icons**" option. Uncheck "**Check daily for Git updates**" if you prefer not to receive daily update checks. Click "Next."
+
+7. You'll be asked if you want to create a folder in the Start menu. You can click "Next" to proceed, but it's advisable to click "Don't create a Start menu folder" to avoid cluttering the Start menu. If you want an additional Git launcher, click "Next."
+
+8. On the next screen, you'll be prompted to choose a default text editor for Git. The default option is **Vim**. ( _all jokes aside its a good text editor_ ) Click "Next."
+
+9. Leave everything as default on the following screen and click "**Let Git decide**." Then click "Next."
+
+10. Adjust the path environment by checking the recommended options: "**Git from the command line and Git from 3rd-party software**." Click "Next."
+
+    _When you select this option, it makes sure that Git can be used with different text-based tools like Command Prompt, PowerShell, and others. This helps you manage and keep track of different versions of your work and makes it easier to organize your projects._
+
+11. Choose the **bundled OpenSSH** option for the SSH executable and click "Next."
+
+    _Choosing "bundled OpenSSH" is like giving your computer a secure way to talk to other computers on the internet. This can be useful when you want to securely connect to faraway computers or share files online, even if you're not a technical expert. Think of it as having a special key to open a secure internet door._
+
+12. For the HTTPS transport (SSL/TLS library), select "**Use the OpenSSL library**" and click "Next."
+
+    _By selecting "Use the OpenSSL library," it's like adding an extra layer of security to your internet activities. This helps protect your online communication, like when you visit secure websites or download files. It's similar to picking a strong lock to keep your online interactions safe._
+
+13. On the "Configuring the line ending conversion" screen, leave it as the default by checking the first option, "**Checkout Windows-style, commit Unix-style line endings.**" Click "Next."
+
+    _This option ensures that text files look and work correctly on your computer, whether you're using Windows or another system. It's like making sure your documents are easy to read and share, no matter where you are._
+
+14. For Git pull, leave it as the default option and click "Next."
+
+15. On the next screen, leave everything as default and click "Next."
+
+16. On the "Configuring extra options" screen, check the "**Enable file system caching**" checkbox and click "Next."
+
+17. On the "Configuring experimental options" screen, **leave both options unchecked.**
+
+18. Click "**INSTALL**" to begin the installation process.
+
+19. Once the installation is complete, uncheck "View release notes" and check "**Launch Git Bash**" to run the Git command-line interface.
+
+20. In the Git Bash command line, type `ls` to list files in the directory you're in. This will confirm that Git is installed and working correctly.
+
+Now that you have Git installed on your Windows machine, you can proceed to learn the basics of Git and how to use it for version control and collaboration.
