--- a/Before You Start/2. Dev-Tools Setup Guide.md
+++ b/Before You Start/2. Dev-Tools Setup Guide.md
@@ -118,6 +118,7 @@ Remember, the tools you choose can significantly impact your development experie
 <br/>
 <br/>
 
-# Page Navigation
+## Page Navigation
 
- [Previous Page](./1.%20Mindset%20and%20Challenges.md) | [Next Page](./3.%20Workspace%20Setup%20Guide..md)
+[![Previous Page](https://img.shields.io/badge/Previous%20Page-0077B5?style=for-the-badge)](./1.%20Mindset%20and%20Challenges.md)
+[![Next Page](https://img.shields.io/badge/Next%20Page-1DA1F2?style=for-the-badge)](./3.%20Workspace%20Setup%20Guide..md)
