--- a/Before You Start/3. Workspace Setup Guide..md
+++ b/Before You Start/3. Workspace Setup Guide..md
@@ -1,4 +1,4 @@
-# Setting Up Your Workspace in VS Code ✨🛠️
+# Learning Path: Setting Up Your Workspace in VS Code ✨🛠️
 
 In this guide, we'll walk you through the process of setting up your workspace in Visual Studio Code (VS Code) to enhance your development experience. We'll cover installing useful extensions, configuring custom settings, and providing a list of beginner-friendly keyboard shortcuts. 🚀👩‍💻
 
