Specified the title for Installation Tips

--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -106,7 +106,7 @@ Before we begin, it's essential to understand the two available options for Git 
 
 For this tutorial, we will install the standalone installer and explain how to install it on your Windows computer. Please follow the step-by-step guide below to install Git correctly.
 
-## Installation Steps
+## Git Installation Steps
 
 1. Visit the official Git download page for Windows at [https://git-scm.com/download/win](https://git-scm.com/download/win).
 
