Added Banners and Page Nav

--- a/Before You Start/1. Mindset and Challenges.md
+++ b/Before You Start/1. Mindset and Challenges.md
@@ -1,4 +1,4 @@
-![Mindset](../Assets/Mindset.webp)
+![Mindset](../Assets/Banners/Mindset.webp)
 
 🚀 **Having the right mindset is like writing the perfect code - it's crucial for success.** 🚀 Just as mastering the technical aspects is vital, your attitude, approach, and mentality are the keystrokes that shape your journey. Your reasons for embarking on this coding adventure have a significant impact on your mindset and approach. Whether you're coding to conquer the world or simply to conquer your own goals, your motives play a huge role in keeping you inspired and locked onto your targets.
 
@@ -40,7 +40,7 @@ Even if your coding path isn't aiming for the stars, the basics lay the groundwo
 
 🚀🔥 Keep the passion burning and your mind open, fellow coder! Your journey is as unique as your fingerprint. Remember, every line of code you write is a step toward building your own digital constellation. 🌌✨
 
-![Syndrome](../Assets/Syndromes.webp)
+![Syndrome](../Assets/Banners/Syndromes.webp)
 
 ## **What is a Syndrome?**
 
@@ -81,7 +81,7 @@ _Programmers might aim for perfection in their code, which can lead to spending 
 
 **All links are curated carefully from the authentic sources and fact checked.**
 
-![Tutorial Hell](../Assets/Tutorial%20Hell.webp)
+![Tutorial Hell](../Assets/Banners/Tutorial%20Hell.webp)
 
 _"**Tutorial hell**" is when someone who's learning to code gets stuck always doing tutorials without getting better at coding on their own. They keep following instructions but struggle to create their own code. This can make them feel frustrated and unsure about their skills. It's like reading cooking recipes but never making your own dishes. It's important to practice coding by yourself to improve._
 
