--- a/Before You Start/2. Dev-Tools Setup Guide.md
+++ b/Before You Start/2. Dev-Tools Setup Guide.md
@@ -1,4 +1,4 @@
-# Learning Path: Tools You Need to Start Your Development Journey 🛠️
+![Tools You Need](../Assets/Banners/Toots-Title.webp)
 
 To embark on your development journey, you'll need a 💻 or 🖥️ and an IDE, which stands for _Integrated Development Environment_. If that term sounds overwhelming, fear not! We're here to guide you through each step of the way. 🚀
 
