--- a/Before You Start/4. Git & GitHub Mastery.md
+++ b/Before You Start/4. Git & GitHub Mastery.md
@@ -1,4 +1,4 @@
-# Learning Path: Git and GitHub Mastery
+![Git Github Mastery](../Assets/Banners/Git-Github-Mastery.webp)
 
 In this guide, we will embark on a journey to enhance your development skills by first diving into the fundamental concepts of Git, denoted by the section titled "Git Fundamentals" (🚀 Learning Git First). Git is the cornerstone of version control, enabling you to manage your code efficiently, track changes, and collaborate seamlessly.
 
@@ -170,7 +170,7 @@ For this tutorial, we will install the standalone installer and explain how to i
 
 14. For Git pull, leave it as the default option "**Default (fast-forward or merge)**" and click "Next."
    
-    <img src="../Assets/Git-Installation/13. Git-bash-terminal-emu.png" width="400" style="margin-left: 90px;"/>
+    <img src="../Assets/Git-Installation/14. Pull-behaviour.png" width="400" style="margin-left: 90px;"/>
 
 15. On the next screen, **Credentials helper**, leave everything as default "**Git credentials manager**" and click "Next."
    
@@ -239,3 +239,8 @@ Now that you have Git installed on your Windows machine, you can proceed to lear
 # Troubleshooting
 
 # Git GUI Tools
+
+## Page Navigation
+
+[![Previous Page](https://img.shields.io/badge/Previous%20Page-0077B5?style=for-the-badge)](./3.%20Workspace%20Setup%20Guide..md)
+[![Next Page](https://img.shields.io/badge/Next%20Page-1DA1F2?style=for-the-badge)](./5.%20Choosing%20A%20Language.md)
