New File Tree - Project Outline

--- a/Before You Start/1. Mindset and Challenges.md
+++ b/Before You Start/1. Mindset and Challenges.md
@@ -83,6 +83,8 @@ _Programmers might aim for perfection in their code, which can lead to spending 
 
 ![Tutorial Hell](../Assets/Banners/Tutorial%20Hell.webp)
 
+## **What is tutorial hell?**
+
 _"**Tutorial hell**" is when someone who's learning to code gets stuck always doing tutorials without getting better at coding on their own. They keep following instructions but struggle to create their own code. This can make them feel frustrated and unsure about their skills. It's like reading cooking recipes but never making your own dishes. It's important to practice coding by yourself to improve._
 
 - [How to Get Out of Tutorial Hell](https://www.youtube.com/watch?v=343EWZS9O88&pp=ygUNdHV0b3JpYWwgaGVsbA==)
