--- a/Before You Start/2. Dev-Tools Setup Guide.md
+++ b/Before You Start/2. Dev-Tools Setup Guide.md
@@ -1,122 +1,146 @@
 ![Tools You Need](../Assets/Banners/Toots-Title.webp)
 
-To embark on your development journey, you'll need a 💻 or 🖥️ and an IDE, which stands for _Integrated Development Environment_. If that term sounds overwhelming, fear not! We're here to guide you through each step of the way. 🚀
+# Tools for Your Development Journey 🚀
 
-Think of tools as the equipment you can't work without. Just as a woodworker requires hand tools to cut wood, developers need the right equipment to craft a magnificent [Webapp](https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app). ✨
+To embark on your development journey, you'll need a 💻 or 🖥️ and an IDE, which stands for _Integrated Development Environment_. If that term sounds overwhelming, fear not! We're here to guide you through each step of the way. ✨
 
-## Essential Tools 🧰
+Think of tools as the equipment you can't work without. Just as a woodworker requires hand tools to cut wood, developers need the right equipment to craft a magnificent [Webapp](https://www.techtarget.com/searchsoftwarequality/definition/Web-application-Web-app). 💻
+
+## Essential Tools for Successful Development 🧰
 
 1. **Computer / Laptop** 💻
 
-    Your development setup begins with a reliable computer or laptop. This will serve as the foundation for your coding endeavors. Don't worry if you have a less powerful computer; we have a solution using online IDEs. 💪
-    <br/>
-    <br/>
+   Your development setup begins with a reliable computer or laptop. This will serve as the foundation for your coding endeavors. Don't worry if you have a less powerful computer; we have a solution using online IDEs. 💪
 
 2. **IDE (Integrated Development Environment)** 💼
 
-    An IDE is your virtual workspace for writing, testing, and debugging code. It provides a suite of tools to streamline the development process.
+   An IDE is your virtual workspace for writing, testing, and debugging code. It provides a suite of tools to streamline the development process.
 
-    Below are some of our top 5 user-friendly and beginner-friendly IDE recommendations:
+   Below are some of our top 5 user-friendly and beginner-friendly IDE recommendations:
 
-    | IDE                 | Description           | Link                                      |
-    |---------------------|-----------------------|-------------------------------------------|
-    | Visual Studio Code | A powerful and extensible code editor loved by developers | [Download](https://code.visualstudio.com/) |
-    | Eclipse IDE       | A versatile IDE with a wide range of plugins and support for various languages | [Download](https://www.eclipse.org/) |
-    | NetBeans           | An easy-to-use IDE that offers great Java development capabilities | [Download](https://netbeans.apache.org/) |
-    | Atom              | A hackable text editor that's beginner-friendly and highly customizable | [Download](https://atom.io/) |
-    | Code::Blocks     | A free, open-source IDE suitable for C and C++ programming | [Download](https://www.codeblocks.org/) |
-    <br/>
+   | IDE                 | Description           | Link                                      |
+   |---------------------|-----------------------|-------------------------------------------|
+   | Visual Studio Code | A powerful and extensible code editor loved by developers | [Download](https://code.visualstudio.com/) |
+   | Eclipse IDE       | A versatile IDE with a wide range of plugins and support for various languages | [Download](https://www.eclipse.org/) |
+   | NetBeans           | An easy-to-use IDE that offers great Java development capabilities | [Download](https://netbeans.apache.org/) |
+   | Atom              | A hackable text editor that's beginner-friendly and highly customizable | [Download](https://atom.io/) |
+   | Code::Blocks     | A free, open-source IDE suitable for C and C++ programming | [Download](https://www.codeblocks.org/) |
 
 3. **Recommended Operating System** 🖥️
 
-    While most modern operating systems can support development, some are better suited for specific tasks. Consider these options:
+   While most modern operating systems can support development, some are better suited for specific tasks. Consider these options:
 
-    - **Windows**: Widely used with extensive software support.
-    - **macOS**: Great for Apple ecosystem development.
-    - **Linux**: Offers customization and developer-friendly features.
+   - **Windows**: Widely used with extensive software support.
+   - **macOS**: Great for Apple ecosystem development.
+   - **Linux**: Offers customizability and developer-friendly features.
 
-    <br/>
-    <br/>
+<br>
 
 4. **Understanding Different Operating Systems** 🌐
 
-    Operating systems (OS) are the software that manage hardware and software resources and provide services to applications. Here are some pros and cons of common OS types:
+   Operating systems (OS) are the software that manage hardware and software resources and provide services to applications. Here are some pros and cons of common OS types:
 
-    | Operating System | Pros | Cons |
-    |------------------|------|------|
-    | Windows          | Extensive software support, user-friendly interface | Less customizable, can be resource-intensive |
-    | macOS            | Seamless integration with Apple devices, Unix-based terminal | Limited hardware choices, closed ecosystem |
-    | Linux            | Customizability, open-source community, developer tools | Learning curve for beginners, hardware compatibility |
-    <br/>
+   | Operating System | Pros | Cons |
+   |------------------|------|------|
+   | Windows          | Extensive software support, user-friendly interface | Less customizable, can be resource-intensive |
+   | macOS            | Seamless integration with Apple devices, Unix-based terminal | Limited hardware choices, closed ecosystem |
+   | Linux            | Customizability, open-source community, developer tools | Learning curve for beginners, hardware compatibility |
 
 5. **Note-Taking Apps** 📝
 
-    Keeping track of your ideas, code snippets, and progress is crucial. Consider using note-taking apps like:
+   Keeping track of your ideas, code snippets, and progress is crucial. Consider using note-taking apps like:
 
-    | App     | Description | Link |
-    |---------|-------------|------|
-    | Notion  | An all-in-one workspace for notes, tasks, wikis | [Download](https://www.notion.so/) |
-    | Obsidian | A knowledge base that works on local Markdown files | [Download](https://obsidian.md/) |
-    | Evernote | A note-taking app with rich features and cloud sync | [Download](https://evernote.com/) |
-    | OneNote  | Microsoft's digital notebook for organizing ideas | [Download](https://www.onenote.com/) |
-    <br/>
+   | App     | Description | Link |
+   |---------|-------------|------|
+   | Notion  | An all-in-one workspace for notes, tasks, wikis | [Download](https://www.notion.so/) |
+   | Obsidian | A knowledge base that works on local Markdown files | [Download](https://obsidian.md/) |
+   | Evernote | A note-taking app with rich features and cloud sync | [Download](https://evernote.com/) |
+   | OneNote  | Microsoft's digital notebook for organizing ideas | [Download](https://www.onenote.com/) |
 
-## Online IDEs and Other Important Tools 💻
+    ## Exploring Free Online IDEs for Low-Powered PCs 🌐
 
-6. **Online IDEs** 🌐
+    Don't let hardware limitations hold you back. If you're not equipped with a powerful PC or simply prefer not to install a full-fledged IDE, online Integrated Development Environments (IDEs) can be a game-changer. These web-based tools run directly in your web browser, making them ideal for quick experiments, learning, and coding on the go.
 
-    If you're not ready to install a full-fledged IDE, you can start with online IDEs that run directly in your browser. These can be convenient for quick experiments and learning.
+    Here are some recommended free online IDEs to consider:
 
     | Online IDE          | Description           | Link                                      |
     |---------------------|-----------------------|-------------------------------------------|
-    | Replit              | Code, collaborate, compile, run           | [Link](https://replit.com/) |
-    | CodeSandbox         | Create web applications in your browser | [Link](https://codesandbox.io/) |
-    | JSFiddle            | Test your HTML, CSS, and JavaScript online | [Link](https://jsfiddle.net/) |
-    | GitHub Codespaces   | Develop directly in your GitHub repository | [Link](https://github.com/features/codespaces) |
-    <br/>
+    | Replit              | Code, collaborate, compile, run           | [Replit](https://replit.com/) |
+    | CodeSandbox         | Create web applications in your browser | [CodeSandbox](https://codesandbox.io/) |
+    | JSFiddle            | Test your HTML, CSS, and JavaScript online | [JSFiddle](https://jsfiddle.net/) |
+    | GitHub Codespaces   | Develop directly in your GitHub repository | [GitHub Codespaces](https://github.com/features/codespaces) |
+    | StackBlitz          | Develop web apps with live previews and collaboration | [StackBlitz](https://stackblitz.com/) |
+    | Glitch              | Collaborative web app development with instant sharing | [Glitch](https://glitch.com/) |
+    | CodePen             | Social development environment for HTML, CSS, and JavaScript | [CodePen](https://codepen.io/) |
+    | AWS Cloud9          | Cloud-based IDE with various development environments | [AWS Cloud9](https://aws.amazon.com/cloud9/) |
 
-7. **Text Editors: Complementing Your IDE** ✍️
+    With these free online IDEs, you can harness the power of development without the need for hefty hardware. Start coding and exploring your ideas without constraints! 💡🚀
 
-    Even if you have a powerful IDE, there might be times when a lightweight text editor comes in handy. Text editors are great for quick edits, opening individual files, or focusing on simplicity.
+6. **Text Editors: Complementing Your IDE** ✍️
 
-    **Do You Need Both?**
+   Even if you have a powerful IDE, there might be times when a lightweight text editor comes in handy. Text editors are great for quick edits, opening individual files, or focusing on simplicity.
 
-    While IDEs offer extensive tools for development, text editors can still have their place. IDEs provide a comprehensive environment for large projects, debugging, and integrated toolsets. On the other hand, text editors are lightweight and perfect for quick code edits, working with configuration files, or when you prefer minimal distractions.
+   **Do You Need Both?**
 
-    **Use Cases for Text Editors and IDEs**
-    - **Text Editors**:
-      - Quick code edits and tweaks
-      - Working with plain text files
-      - Focusing on individual files without project structure
-      - Learning basic coding without the complexity of a full IDE
+   While IDEs offer extensive tools for development, text editors can still have their place. IDEs provide a comprehensive environment for large projects, debugging, and integrated toolsets. On the other hand, text editors are lightweight and perfect for quick code edits, working with configuration files, or when you prefer minimal distractions.
 
-    - **IDEs**:
-      - Developing large-scale applications
-      - Integrated debugging and testing tools
-      - Managing complex projects with multiple files and dependencies
-      - Utilizing code suggestions, auto-completion, and advanced features
-    <br/>
-    <br/>
-    <br/>
+   **Use Cases for Text Editors and IDEs**
+   - **Text Editors**:
+     - Quick code edits and tweaks
+     - Working with plain text files
+     - Focusing on individual files without project structure
+     - Learning basic coding without the complexity of a full IDE
 
-8. **Browser Developer Tools** 🌐
+    <br>
 
-    If you're planning to become a web developer, you'll work with web technologies. Browser developer tools are invaluable for debugging and inspecting web pages. They come built into modern browsers like Chrome and Firefox, which are also developer-friendly.
+   - **IDEs**:
+     - Developing large-scale applications
+     - Integrated debugging and testing tools
+     - Managing complex projects with multiple files and dependencies
+     - Utilizing code suggestions, auto-completion, and advanced features
 
-    We recommend using Chrome for development.
-    <br/>
-    <br/>
+    ## Recommended Text Editors 📝
 
-9. **Additional Resources** 📚
+    Here are some popular text editors you can use alongside your IDE:
 
-    For version control, we have a dedicated section that covers Git and GitHub. You can learn more about version control and collaboration by visiting our guide: [Git & GitHub](./4.%20Git%20&%20Github.md).
-    <br/>
-    <br/>
+    | Text Editor        | Description                  | Link                                      |
+    |--------------------|------------------------------|-------------------------------------------|
+    | Sublime Text       | A versatile and fast text editor with a rich plugin ecosystem | [Download](https://www.sublimetext.com/) |
+    | Notepad++          | A powerful, free text editor for Windows users with extensive features | [Download](https://notepad-plus-plus.org/) |
+    | Atom               | A hackable text editor known for its customization options | [Download](https://atom.io/) |
+    | Vim                | A highly configurable, efficient, and keyboard-driven text editor | [Download](https://www.vim.org/download.php) |
+
+    These text editors offer a lightweight and flexible alternative to complement your development workflow.
+
+7. **Browser Developer Tools** 🌐
+
+   If you're planning to become a web developer, you'll work with web technologies. Browser developer tools are invaluable for debugging and inspecting web pages. They come built into modern browsers like Chrome and Firefox, which are also developer-friendly.
+
+   We recommend using Google Chrome for development.
+
+    ### Pros
+
+    1. **DevTools:** Powerful debugging tools.
+    2. **Market Share:** Ensures broad compatibility.
+    3. **Performance:** Fast and supports modern web tech.
+    4. **Cross-Device Debugging:** Excellent mobile debugging.
+    5. **Extensions:** Abundant developer tools.
+
+    ### Cons
+
+    1. **Resource Intensive:** High RAM usage.
+    2. **Privacy Concerns:** Data collection scrutiny.
+    3. **Not Open Source:** Limited open-source nature.
+    4. **Google-Centric:** Favors Google services.
+    5. **Stability Issues:** Occasional crashes.
+
+    <br>
+
+8. **Additional Resources** 📚
+
+   For version control, we have a dedicated section that covers Git and GitHub. You can learn more about version control and collaboration by visiting our guide: [Git & GitHub](./4.%20Git%20&%20GitHub%20Mastery.md).
 
 Remember, the tools you choose can significantly impact your development experience. Take your time to explore and find the ones that suit your workflow and preferences. Happy coding! 👩‍💻👨‍💻
-
-<br/>
-<br/>
 
 ## Page Navigation
 
