Added Content on Python 101 and fixed basic errors

--- a/Before You Start/4. Git Basics.md
+++ b/Before You Start/4. Git Basics.md
@@ -396,15 +396,22 @@ This would ignore all `.log` files except for `important.log`.
 
 ## Wildcard Patterns
 
-In `.gitignore` files, you can use wildcard patterns to match and exclude files based on certain criteria. Here are some common wildcard characters and their usage:
+In Git, wildcard patterns act like special codes that tell Git which files to ignore and not include in your version control. These patterns are super useful, especially for beginners. Let's break it down:
 
-- The `*` (asterisk) wildcard matches any number of characters in a filename. For example, `*.log` would match all files with the `.log` extension.
+### The * (Asterisk) 
 
-- The `?` (question mark) wildcard matches a single character in a filename. For instance, `file?.txt` would match `file1.txt` and `file2.txt`.
+- The `*` (asterisk) wildcard in a .gitignore file matches any file name that ends with specific characters. For example, `*.log` tells Git to ignore all files ending with "`.log`," like `error.log` or `access.log`. It's a way to exclude files with a certain ending from being tracked in Git.
 
-- The `**` (double asterisk) wildcard is used to match directories and subdirectories recursively. For example, `/logs/**` would ignore all files in the `logs` directory and its subdirectories.
+### The ? (Question Mark) 
 
-These wildcard patterns provide flexibility when specifying files or directories to ignore.
+- The `?` (question mark) wildcard in a .gitignore file matches a single character in a file's name. For instance, `file?.txt` would match files like `file1.txt` or `file2.txt`. It's useful for ignoring files with similar names that differ by just one character.
+
+
+### The ** (Double Asterisk)
+
+- The `**` (double asterisk) wildcard in a .gitignore file is powerful. It's used to ignore files in folders and their subfolders. For example, `/logs/**` means "ignore all files in the '`logs`' folder and its subfolders." It's a way to exclude entire directory structures from Git tracking.
+
+These wildcards help you be specific about which files or folders to exclude from your Git repository. Whether it's ignoring certain file types or whole directories and their contents, these wildcard patterns give you fine-grained control over what goes into your version control.
 
 ## .gitignore Best Practices
 
