This is a new PR for HTML

--- a/Before You Start/3. Workspace Setup Guide..md
+++ b/Before You Start/3. Workspace Setup Guide..md
@@ -1,6 +1,6 @@
 ![Workspace Setup](../Assets/Banners/Workspace%20VS%20CODE.webp)
 
-In this guide, we'll walk you through the process of setting up your workspace in Visual Studio Code (VS Code) to enhance your development experience. We'll cover installing useful extensions, configuring custom settings, and providing a list of beginner-friendly keyboard shortcuts. 🚀👩‍💻
+In this guide, we'll walk you through the process of setting up your workspace in Visual Studio Code (VS Code) to enhance your development experience. We'll cover installing useful extensions, configuring custom settings, and providing a list of beginner-friendly keyboard shortcuts. 🚀👩‍💻****
 
 ## Extensions 🚀
 
